Updated dependencies, updated Kotlin, applied Sonarlint recommendations.