@@ -1,6 +1,5 @@
 package io.luna.game.model.item;
 
-import com.google.common.collect.ImmutableList;
 import io.luna.game.event.impl.EquipmentChangeEvent;
 import io.luna.game.model.def.EquipmentDefinition;
 import io.luna.game.model.item.RefreshListener.PlayerRefreshListener;
@@ -9,11 +8,15 @@ import io.luna.game.model.mob.block.UpdateFlagSet.UpdateFlag;
 import io.luna.game.plugin.PluginManager;
 
 import java.util.BitSet;
+import java.util.List;
 import java.util.Optional;
 import java.util.OptionalInt;
-import java.util.stream.IntStream;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import static io.luna.util.OptionalUtils.*;
+import static io.luna.util.OptionalUtils.ifPresent;
+import static io.luna.util.OptionalUtils.mapToInt;
+import static io.luna.util.OptionalUtils.matches;
 
 /**
  * An item container model representing a player's equipment.
@@ -101,9 +104,8 @@ public final class Equipment extends ItemContainer {
          * @param item The item to get the bonuses of.
          * @return The item's bonuses.
          */
-        private ImmutableList<Integer> getBonuses(Optional<Item> item) {
-            return item.map(Item::getEquipDef).
-                    map(EquipmentDefinition::getBonuses).orElse(EMPTY_BONUSES);
+        private List<Integer> getBonuses(Optional<Item> item) {
+            return item.map(Item::getEquipDef).map(EquipmentDefinition::getBonuses).orElse(EMPTY_BONUSES);
         }
 
         /**
@@ -113,10 +115,10 @@ public final class Equipment extends ItemContainer {
          * @param newItem The new item.
          */
         private void updateBonus(Optional<Item> oldItem, Optional<Item> newItem) {
-
             // Retrieve old and new bonuses.
-            ImmutableList<Integer> oldBonuses = getBonuses(oldItem);
-            ImmutableList<Integer> newBonuses = getBonuses(newItem);
+            List<Integer> oldBonuses = getBonuses(oldItem);
+            List<Integer> newBonuses = getBonuses(newItem);
+
             for (int index = 0; index < bonuses.length; index++) {
                 int old = oldBonuses.get(index);
                 int replace = newBonuses.get(index);
@@ -137,6 +139,7 @@ public final class Equipment extends ItemContainer {
          */
         private void writeBonuses() {
             StringBuilder sb = new StringBuilder();
+
             for (int index = 0; index < bonuses.length; index++) {
                 // Smart write, only write bonuses if they've changed.
                 if (writeBonuses.get(index)) {
@@ -146,24 +149,23 @@ public final class Equipment extends ItemContainer {
                     int widget = 1675 + index + (index == 10 || index == 11 ? 1 : 0);
 
                     // Append the bonus string.
-                    sb.append(name).append(": ").
-                            append(positive ? "+" : "").
-                            append(value);
+                    sb.append(name).append(": ").append(positive ? "+" : "").append(value);
 
                     // Queue the packet to display it.
                     player.sendText(sb.toString(), widget);
                     sb.setLength(0);
                 }
             }
+
             writeBonuses.clear();
         }
     }
 
     /**
-     * An array of bonuses, all of which are {@code 0}.
+     * An unmodifiable list of bonuses, all of which are {@code 0}.
      */
-    private static final ImmutableList<Integer> EMPTY_BONUSES = IntStream.range(0, 12).boxed().
-            map(index -> 0).collect(ImmutableList.toImmutableList());
+    private static final List<Integer> EMPTY_BONUSES = Stream.generate(() -> 0).limit(12)
+            .collect(Collectors.toUnmodifiableList());
 
     /**
      * The head index.
@@ -281,10 +283,12 @@ public final class Equipment extends ItemContainer {
     public static final int PRAYER = 11;
 
     /**
-     * A list of bonus names.
+     * An unmodifiable list of bonus names.
      */
-    public static final ImmutableList<String> BONUS_NAMES = ImmutableList.of("Stab", "Slash", "Crush",
-            "Magic", "Range", "Stab", "Slash", "Crush", "Magic", "Range", "Strength", "Prayer");
+    public static final List<String> BONUS_NAMES = List.of(
+        "Stab", "Slash", "Crush", "Magic", "Range", "Stab",
+        "Slash", "Crush", "Magic", "Range", "Strength", "Prayer"
+    );
 
     /**
      * An error message.
@@ -321,12 +325,9 @@ public final class Equipment extends ItemContainer {
         this.player = player;
         inventory = player.getInventory();
 
-        EquipmentListener equipmentListener = new EquipmentListener(player);
-        this.equipmentListener = equipmentListener;
+        this.equipmentListener = new EquipmentListener(player);
 
-        setListeners(new PlayerRefreshListener(player, ERROR_MSG),
-                equipmentListener,
-                new WeightListener(player));
+        setListeners(new PlayerRefreshListener(player, ERROR_MSG), equipmentListener, new WeightListener(player));
     }
 
     @Override
@@ -394,32 +395,30 @@ public final class Equipment extends ItemContainer {
      * Returns {@code true} if successful.
      */
     public boolean equip(int inventoryIndex) {
-
         // Validate index.
         Item inventoryItem = inventory.get(inventoryIndex);
+
         if (inventoryItem == null) {
             return false;
         }
+
         EquipmentDefinition equipDef = inventoryItem.getEquipDef();
         int equipIndex = equipDef.getIndex();
 
         // Check equipment requirements.
-        boolean failedToMeet = ifPresent(equipDef.getFailedRequirement(player),
-                req -> req.sendFailureMessage(player));
+        boolean failedToMeet = ifPresent(equipDef.getFailedRequirement(player), req -> req.sendFailureMessage(player));
+
         if (failedToMeet) {
             return false;
         }
 
         // Unequip something if we have to.
         OptionalInt unequipIndex = OptionalInt.empty();
-        if (equipIndex == WEAPON && equipDef.isTwoHanded()) {
 
+        if (equipIndex == WEAPON && equipDef.isTwoHanded()) {
             // Equipping 2h weapon, so unequip shield.
             unequipIndex = OptionalInt.of(SHIELD);
-        } else if (equipIndex == Equipment.SHIELD &&
-                occupied(WEAPON) &&
-                get(WEAPON).getEquipDef().isTwoHanded()) {
-
+        } else if (equipIndex == Equipment.SHIELD && occupied(WEAPON) && get(WEAPON).getEquipDef().isTwoHanded()) {
             // Equipping shield, so unequip 2h weapon.
             unequipIndex = OptionalInt.of(WEAPON);
         }
@@ -427,6 +426,7 @@ public final class Equipment extends ItemContainer {
         // Check if inventory has enough space.
         if (unequipIndex.isPresent()) {
             int remaining = inventory.computeRemainingSize();
+
             if (remaining == 0 && occupied(unequipIndex.getAsInt()) && occupied(equipIndex)) {
                 inventory.fireCapacityExceededEvent();
                 return false;
@@ -438,9 +438,11 @@ public final class Equipment extends ItemContainer {
         unequipIndex.ifPresent(this::unequip);
 
         Item equipItem = get(equipIndex);
+
         if (equipItem == null || inventory.add(equipItem)) {
             set(equipIndex, inventoryItem);
         }
+
         return true;
     }
 
@@ -451,9 +453,9 @@ public final class Equipment extends ItemContainer {
      * @return {@code true} if successful.
      */
     public boolean unequip(int equipmentIndex) {
-
         // Validate index.
         Item equipmentItem = get(equipmentIndex);
+
         if (equipmentItem == null) {
             return false;
         }
@@ -463,6 +465,7 @@ public final class Equipment extends ItemContainer {
             set(equipmentIndex, null);
             return true;
         }
+
         return false;
     }
 
@@ -485,9 +488,11 @@ public final class Equipment extends ItemContainer {
             if (item == null) {
                 continue;
             }
+
             // Update bonuses.
             equipmentListener.updateBonus(Optional.empty(), Optional.of(item));
         }
+
         // Write them all.
         equipmentListener.writeBonuses.set(0, 12);
         equipmentListener.writeBonuses();
@@ -497,6 +502,6 @@ public final class Equipment extends ItemContainer {
      * @return An array of equipment bonuses.
      */
     public int[] getBonuses() {
-        return bonuses;
+        return bonuses.clone();
     }
 }
